新增配置选项